# OOP

.devcontainer/: devcontainer.json
lab1/: CMakeLists.txt  main.cpp
lab1/include/: scaryNum.h
lab1/src/: scaryNum.cpp
lab1/test/: scaryNumTests.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/include/: Hex.h
lab2/src/: Hex.cpp
lab2/test/: hexTests.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/include/: Figure.h  Rectangle.h  ShapeArray.h  Square.h  Trapezoid.h
lab3/src/: Figure.cpp  Rectangle.cpp  ShapeArray.cpp  Square.cpp  Trapezoid.cpp
lab3/test/: FigureTest.cpp
